try structured concurrency